# ee-satellites

./: LICENSE  README.md
example/: areas-of-interest.json  notebook.ipynb  requirements.txt
src/: setup.cfg
