[metadata]
name = ee_satellites
version = 0.0.15
author = Francesco Amato
author_email = amatofrancesco99@gmail.com
description = A Python library that allows to extract data from satellites, exploiting machine parallelism and relying on Google Earth Engine APIs.
long_description = file: ../README.md
long_description_content_type = text/markdown
license = mit
url = https://github.com/Amatofrancesco99/ee-satellites
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
py_modules = 
    ee_satellites
    sentinel1
    sentinel2
    landsat8
install_requires =
    earthengine-api
    pandas
